Version 0.1.4
- New Skin: Moden - 225 Points - Clean & Simplistic
- Backend changes

Version 0.1.3
- Added Skins! The first batch are "ASCII Smile" and "Default but cooler"
- New Christmas Event (Until 01/01!)
- New item! x2 your Current Score - One time use - 0 Points: Double your current score by 2. The catch is you can only use it once.
- Fixes idk

Version 0.1.2
- New sprite when clicking the face
- Added sound when buying a thing
- Other small changes

Version 0.1.1
- Item Icons
- Link Embeds
- Links to source code and github repo

Version 0.1.0
- Initial Version