@@ -1,6 +1,7 @@
 Version 0.1.4
 - New Skin: Moden - 225 Points - Clean & Simplistic
-- Backend changes
+- Mobile clicker icon scaling (you can force it by calling 'debug("forceMobile")')
+- Backend changes (mainly cleaning)
 
 Version 0.1.3
 - Added Skins! The first batch are "ASCII Smile" and "Default but cooler"
